	  
	* Moved all the options/state querying to eSTAR::Util and put wrapper
	  methods into the Handler classes only.
	  
	* Wrote a datamining_client.pl script which pushes a VOTable file to
	  the data_miner.pl process, along with a host:port to reply to and
	  context ID. This script runs up a "fake" wfcam_agent server for the
	  data_miner.pl to reply to after it has processed the pushed file.
	  
	* Added a handle_objects() method to the data_miner.pl, this should  
	  return immediately with an ACK to the client/agent calling it saying
	  that everything is okay, and then return its results in an async
	  manner using threads.
	  
	* Made eSTAR::Util use EXPORT_OK rather than EXPORT and fixed the
	  class method calls (hopefully) to reflect this change.        
	  
2004-02-19 Alasdair Allan <aa@astro.ex.ac.uk>

        * Got ping() and echo() working for wfcam_agent.pl. Fixed the breaks
	  in encapsulation present from the 2nd generation code by making 
	  eSTAR::Process and eSTAR::Logging single instance objects.

        * Added a data mining process, carbon copy of the wfcam_agant.pl
	  code with configurations changed. Need to find some way to grab
	  some meta-classes from this so that the 4th generation stuff can
	  actually be easier to write than is currently the case.
	
	* Added a client to generate a VOTable catalogue for a given radius
	  around a given target. Used for deubgging and development of the
	  WFCAM agent and Data Mining Daemon.
	
	* Default options are now generated on first program run only, and
	  the SOAP server has get and set methods exposed to change these.
	      	  
2004-02-18 Alasdair Allan <aa@astro.ex.ac.uk>

        * Inital skeleton installation of the WFCAM survey_agent.pl 
          built. This package is going to be the first 3rd generation
          agent built for the eSTAR project. Initally it should talk
          to the current user_agent.pl and the rest of the 2nd generation